tests/paczka1/small_fuzzy/48007209.err
Error in line 4: jHw8Y S9 12,3
Error in line 3: UzJ8 A375 19,1
Error in line 10: aRnEFUA4HHi S67 876,9
